@@ -12,8 +12,6 @@ import reactor.core.publisher.Mono;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 @RequiredArgsConstructor
 @Service
 public class TaskService {
@@ -29,7 +27,7 @@ public class TaskService {
     public List<ProjectGenerationTask> listTasks() {
         return taskAdapter.getTasks().stream()
                 .map(mapper::toDTO)
-                .collect(toList());
+                .toList();
     }
 
     public ProjectGenerationTask getTask(String taskId) {
